for union tables originTables is mandatory
